--- a/App/Views/site/ocorrencia-agressor-enviar-arquivo-cadastrar-atualizar.html
+++ b/App/Views/site/ocorrencia-agressor-enviar-arquivo-cadastrar-atualizar.html
@@ -34,7 +34,7 @@
           </div>
         </div>
 
-        <form action="/ocorrencia-agressor-enviar-arquivo-cadastrar-atualizar/{$idOcorrencia}/{$idArquivo}" method="post" enctype="multipart/form-data">          
+        <form action="/ocorrencia-agressor-enviar-arquivo-cadastrar-atualizar/{$idOcorrencia}/{$idArquivo}/{$selecionaPessoa.isInstituicao}" method="post" enctype="multipart/form-data">          
           <!--Inicio Selecione Pessoa-->
           <div class="row">
             <div class="col-md-12">
@@ -55,11 +55,21 @@
                 <input type="hidden" id="id-selecione-documento-hidden" value="">
                 <label for="id-selecione-documento">Selecione o documento</label>
                 <select class="form-control select2" name="selecioneDocumento" id="id-selecione-documento">
+                  {if="$tipo == 1"}
                   <option value="cpf">CPF</option>
+                  {/if}
+                  {if="$tipo == 2"}
                   <option value="rg">RG</option>
+                  {/if}
+                  {if="$tipo == 3"}
                   <option value="cnh">CNH</option>
+                  {/if}
+                  {if="$tipo == 4"}
                   <option value="cn">Certidão de Nascimento</option>
+                  {/if}
+                  {if="$tipo == 5"}
                   <option value="cnpj">CNPJ</option>
+                  {/if}
                 </select>
               </div>
             </div>
