Editar / Diferenciar Instituição Pública e Pessoa Jurídica

--- a/App/Views/site/ocorrencia-agressor-cadastrar.html
+++ b/App/Views/site/ocorrencia-agressor-cadastrar.html
@@ -319,14 +319,14 @@
             <div id="id-div-subnome-intituicao-publica">
               <!--Row-->
               <div class="row">
-                <!--Nome do agressor-->
+                <!--Subnome-->
                 <div class="col-md-12">
                   <div class="form-group">
                     <label for="id-subnome-instituicao">Subnome da Instituição Pública</label>
                     <input type="text" name="subnomeInstituicao" id="id-subnome-instituicao" class="form-control" placeholder="Digite o subnome aqui" maxlength="70" onkeyup="validarCaracter(this, 1)">
                   </div>
                 </div>
-                <!--Fim Nome do vitima-->
+                <!--Fim subnome-->
               </div>
               <!--Fim Row-->
             </div>
