--- a/App/Views/site/usuarios-detalhe-editar.html
+++ b/App/Views/site/usuarios-detalhe-editar.html
@@ -83,11 +83,33 @@
                 </div>
               </div>
               <!--Fim Sexo-->
+              {/if}
           </div>
           <!--Fim Row-->
 
+          {if="$dadosUsuario.isPessoa == 0"}
+            {if="$dadosUsuario.status == 1"}
+            <!--Row-->
+            <div class="row">
+              <!--Subnome-->
+              <div class="col-md-12">
+                <div class="form-group">
+                  <label for="id-subnome-usuario">Subnome da Instituição Pública</label>
+                  <input type="text" name="subnomeUsuario" id="id-subnome-usuario" class="form-control" placeholder="Digite o subnome aqui" maxlength="70" value="{$dadosUsuario.subnome}" onkeyup="validarCaracter(this, 1)">
+                </div>
+              </div>
+              <!--Fim subnome-->
+            </div>
+            <!--Fim Row-->
+            {/if}
+          {/if}
+
+          <!--Se e instituicao publica ou pessoa juridica-->
+          <input type="hidden" name="hiddenStatusUsuario" value="{$dadosUsuario.status}">
+          
           <!--Inicio row-->
             <div class="row">
+            {if="$dadosUsuario.isPessoa == 1"}
               <!--CPF-->
               <div class="col-md-3">
                 <div class="form-group">
